fix: repair hide dashboards starting with antislash

--- a/ui/src/locales/de.json
+++ b/ui/src/locales/de.json
@@ -222,8 +222,9 @@
 		"device": "Ausrüstung",
 		"valueType": "Variablentyp",
 		"alarm": "Alarm",
-    "minTreshold": "Mindestschwelle",
-    "maxTreshold": "Maximaler Schwellenwert",
+    	"minTreshold": "Mindestschwelle",
+    	"maxTreshold": "Maximaler Schwellenwert",
+		"triggerType": "Auslöseart",
 		"import": "CSV-Import",
 		"export": "CSV-Export",
 		"warpScriptEditor": "WarpScript-Editor",
