feat: show triggerType, when the variable is of type boolean

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -208,7 +208,7 @@
     "variable": "Variable",
     "text": "Text",
     "warpScript": "WarpScript",
-    "boolean": "Boléen",
+    "boolean": "Booléen",
     "integer": "Entier",
     "real": "Réel",
     "string": "Chaine de caractères",
