feat: add settings field

--- a/ui/src/locales/en.json
+++ b/ui/src/locales/en.json
@@ -208,8 +208,8 @@
     "variable": "Variable",
     "text": "text",
     "warpScript": "WarpScript",
-    "boolean": "bolean",
-    "integer": "Whole",
+    "boolean": "Boolean",
+    "integer": "Integer",
     "real": "Real",
     "string": "String of characters",
     "variableDeleteConfirmMsg": "Do you confirm the deletion?",
