--- a/ui/src/locales/es.json
+++ b/ui/src/locales/es.json
@@ -14,6 +14,9 @@
   "close": "Cerrar",
   "initTemplate": "Plantilla de inicio",
   "other": "Otro",
+  "months": "meses",
+  "year": "año",
+  "years": "años",
   "loader": {
     "msg": "Cargando"
   },
@@ -153,7 +156,21 @@
     "typeAndSizeTextSettingsFile": "ZIP hasta 5MB",
     "comfirmImport": "Importar",
     "importSettingsInfos": "Advertencia: la importación sobrescribirá la configuración actual de este proyecto",
-    "title": "Título"
+    "title": "Título",
+    "dashboardTypeTitle": "Tipo de Panel de Control",
+    "dashboardTypeDescription": "Modificar el tipo de panel de control y gestionar los ajustes.",
+    "dashboardType": "Tipo de Panel de Control",
+    "dashboardTypeLegacy": "Panel de Control Integrado - Heredado",
+    "dashboardTypeGrafana": "Panel de Control Externo Avanzado - Versión 2",
+    "dashboardGrafanaUrl": "URL de la Instancia Externa",
+    "dashboardGrafanaReaderPassword": "Contraseña de la Cuenta de Lectura: ",
+    "dashboardGrafanaWriterPassword": "Contraseña de la Cuenta de Escritura: ",
+    "letEmptyForPasswordGeneration": "Dejar vacío para generar una contraseña aleatoria",
+    "persistentTokenTitle": "Tokens Persistentes",
+    "persistentTokenDescription": "Crear y gestionar tokens persistentes para acceder directamente a la base de datos Warp10.",
+    "persistentTokenDuration": "Duración de validez de los tokens",
+    "persistentTokenRegenerate": "Regenerar los tokens persistentes",
+    "persistentTokenGenerate": "Generar tokens persistentes"
   },
   "projectIndex": {
     "open": "Abrir",
@@ -260,8 +277,8 @@
     },
     "javascript": "Javascript",
     "stop": "Parar",
-    "running":"Comenzó",
-    "stopped":"Interrumpido"
+    "running": "Comenzó",
+    "stopped": "Interrumpido"
   },
   "dashboards": {
     "imgBg": "Imagen de fondo",
