feat: ui improvements, fixes, for variable listing

--- a/ui/src/locales/de.json
+++ b/ui/src/locales/de.json
@@ -283,7 +283,26 @@
     "javascript": "Javascript",
     "stop": "Stoppen",
     "running": "Gestartet",
-    "stopped": "Gestoppt"
+    "stopped": "Gestoppt",
+    "showLogs": "Protokolle anzeigen",
+    "detailsOf": "Details von",
+    "mqttTopic": "MQTT Thema",
+    "mqttTopicDescription": "Das MQTT Thema, das zur Übermittlung von Werten an die Variable verwendet wird.",
+    "warpScriptCode": "WARPSCRIPT Code",
+    "warpScriptCodeDescription": "Der WarpScript-Code, den Sie in das Dashboard einfügen können.",
+    "labels": "Etiketten",
+    "labelsDescription": "Die Liste aller Etiketten (einschließlich versteckter) des GTS.",
+    "telegrafLogs": "Telegraf Protokolle",
+    "telegrafNoLogs": "Es gibt keine aufgezeichneten Protokolle für dieses Projekt.",
+    "lastValue": "Letzter Wert:",
+    "noLastValue": "Kein aufgezeichneter Wert",
+    "showDetails": "Details anzeigen",
+    "showHistory": "Verlauf anzeigen",
+    "noVariableOnProject": "In diesem Projekt gibt es keine Variablen. Beginnen Sie damit, Variablen zu senden, um sie auf dieser Seite einsehen zu können.",
+    "deleteMessage": "Möchten Sie diese Variable wirklich löschen? Alle Daten werden gelöscht",
+    "deleteTitle": "Löschung der Variablen",
+    "deleteConfirmButton": "Löschen",
+    "deleteConfirmation": "Die Variable wurde erfolgreich gelöscht!"
   },
   "dashboards": {
     "imgBg": "Hintergrundbild",
