--- a/ui/src/locales/en.json
+++ b/ui/src/locales/en.json
@@ -283,7 +283,26 @@
     "javascript": "Javascript",
     "stop": "Stop",
     "running": "Running",
-    "stopped": "Stopped"
+    "stopped": "Stopped",
+    "showLogs": "Show Logs",
+    "detailsOf": "Details of",
+    "mqttTopic": "MQTT Topic",
+    "mqttTopicDescription": "The MQTT topic to use for sending values to the variable.",
+    "warpScriptCode": "WARPSCRIPT Code",
+    "warpScriptCodeDescription": "The WarpScript code that you can insert into the dashboard.",
+    "labels": "Labels",
+    "labelsDescription": "The list of all labels (including hidden ones) of the gts.",
+    "telegrafLogs": "Telegraf Logs",
+    "telegrafNoLogs": "There are no logs recorded for this project.",
+    "lastValue": "Last value:",
+    "noLastValue": "No recorded value",
+    "showDetails": "Show Details",
+    "showHistory": "Show History",
+    "noVariableOnProject": "There are no variables in this project. Start by sending variables to be able to view them on this page.",
+    "deleteMessage": "Do you really want to delete this variable? All data will be deleted",
+    "deleteTitle": "Variable Deletion",
+    "deleteConfirmButton": "Delete",
+    "deleteConfirmation": "The variable has been successfully deleted!"
   },
   "dashboards": {
     "imgBg": "Background picture",
