--- a/ui/src/locales/es.json
+++ b/ui/src/locales/es.json
@@ -283,7 +283,26 @@
     "javascript": "Javascript",
     "stop": "Parar",
     "running": "Comenzó",
-    "stopped": "Interrumpido"
+    "stopped": "Interrumpido",
+    "showLogs": "Mostrar los registros",
+    "detailsOf": "Detalles de",
+    "mqttTopic": "Tema MQTT",
+    "mqttTopicDescription": "El tema MQTT a utilizar para enviar valores a la variable.",
+    "warpScriptCode": "Código WARPSCRIPT",
+    "warpScriptCodeDescription": "El código WarpScript que puedes insertar en el tablero.",
+    "labels": "Etiquetas",
+    "labelsDescription": "La lista de todas las etiquetas (incluyendo ocultas) del gts.",
+    "telegrafLogs": "Registros de Telegraf",
+    "telegrafNoLogs": "No hay ningún registro grabado para este proyecto.",
+    "lastValue": "Último valor:",
+    "noLastValue": "Ningún valor registrado",
+    "showDetails": "Mostrar detalles",
+    "showHistory": "Mostrar historial",
+    "noVariableOnProject": "No hay ninguna variable en este proyecto. Comienza por enviar variables para poder consultarlas en esta página.",
+    "deleteMessage": "¿Realmente desea eliminar esta variable? Todos los datos serán eliminados",
+    "deleteTitle": "Eliminación de la variable",
+    "deleteConfirmButton": "Eliminar",
+    "deleteConfirmation": "¡La eliminación de la variable se ha realizado con éxito!"
   },
   "dashboards": {
     "imgBg": "Imagen de fondo",
